[package]
name = "hockey-data"
version = "0.1.0"
authors = ["Blake Walters <blake.walters@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3.48"
wasm-bindgen-futures = "0.4.21"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
